--- a/index.css
+++ b/index.css
@@ -39,10 +39,8 @@ ul li{
     margin-bottom: 10px;
 }
 
-ul li:hover{
-    color: rgb(248, 241, 241);
-    background-color: brown;
-}
+ul button:hover{background-color: rgb(255, 241, 52);}  
+
 
 .container{
     margin-top: 25px;
